Fixed badge overlap on squad list

--- a/src/client/scss/games.scss
+++ b/src/client/scss/games.scss
@@ -996,6 +996,7 @@ section.match-squads {
 				.row {
 					width: 100%;
 					justify-content: center;
+					z-index: 1;
 					&:nth-child(4) {
 						//Halfbacks
 						margin: 8pt 0;
